--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="inputBox">
             <p>Enter the size of the input:</p>
-            <input type="number" id="inputText" class="glowing-border size" placeholder="3">
+            <input type="number" id="inputText" class="glowing-border size" min="0" max="30" placeholder="3">
             <button id="new" class="glowing-border">New Size!</button>
         </div>
     </div>
